--- a/service-discovery/src/main/resources/application.yml
+++ b/service-discovery/src/main/resources/application.yml
@@ -9,3 +9,6 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+  server:
+    enable-self-preservation: false  # 자가 보호 모드 비활성화
+    eviction-interval-timer-in-ms: 3000  # 3초마다 만료된 인스턴스 제거
